modified docker changes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=job-updater-backend
 
-# Database Configuration (matches docker-compose)
-# Database Configuration (matches docker-compose)
-spring.datasource.url=jdbc:h2:mem:jobdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database Configuration (supports H2 local or Postgres via env vars)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:jobdb}
+spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # Server Port
-server.port=8080
+server.port=${PORT:8080}
